# llvm-sandboxer

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: bench.rs
benches/c_files/no_utx/: Makefile  benchmark_0.c  benchmark_1.c  benchmark_2.c  bubble_sort.c  matrix_mul.c  simple_store.c  vec_sum.c
benches/c_files/utx/: Makefile  benchmark_0.c  benchmark_1.c  benchmark_2.c  bubble_sort.c  matrix_mul.c  simple_store.c  vec_sum.c
sandboxer/: Cargo.toml  Makefile  README.md
sandboxer/src/: lib.rs  main.rs  sandboxer.rs
sandboxer/tests/: test_sandboxer.rs  test_verify.rs
sandboxer/tests/c_files/: bad_entry_0.c  bad_entry_3.c  good_entry_1.c  good_entry_3.c
simple_add/: Makefile  main.c
src/: lib.rs  main.rs  runtime.rs  runtime_checks.rs  static_checks.rs
tests/: README.md  test_runtime.rs  test_runtime_checks.rs  test_verify.rs
tests/c_files/: Makefile  bad_entry_0.c  bad_entry_1.c  bad_entry_2.c  bad_entry_3.c  bad_entry_4.c  bad_entry_5.c  bad_entry_6.c  benchmark_1.c  good_entry_0.c  good_entry_1.c  good_entry_2.c  good_entry_3.c  good_entry_4.c  good_entry_5.c  good_entry_6.c  good_entry_7.c  phi_0.c  simple_add.c
